      (Closes: #416548)
  * Fix changelog typos (Closes: #429774)
  * debdiff: Sort conffiles and control before comparing them. Thanks to Peter
    Samuelson for the patch (Closes: #421781)

  [ James Vega ]
  * uupdate:
    + When displaying patch reject files, show the path to the new upstream
      directory where they're contained. (Closes: #419133)

 -- James Vega <jamessan@debian.org>  Thu, 21 Jun 2007 17:50:12 +0100

devscripts (2.10.5) unstable; urgency=low

  [ Luk Claes ]
  * debc: Make reporting on a single deb work again (Closes: #419487).

  [ Adam D. Barratt ]
  * debchange: Add gutsy (gibbon) and UNRELEASED to the list of recognised
    Ubuntu distributions
  * rc-alert
    + Update HTML parsing to support the new structure of the RC bug page
    + The "I" tag can now also mean "lenny-ignore"
    + Add "[E]xperimental" to the distribution list, and remove "X"
      ("not in testing")
  * bts
    + Allow the use of SMTP instead of sendmail. Thanks to Josh Triplett for
      the patch (Closes: #420847)
    + Fix syntax error when reverting to default SENDMAILCMD
    + When cleaning up a bug's cache entries, also remove {raw,status}.mbox
    + Fix pod formatting so that the description of the "fixed" command
      actually appears in the manpage.
    + Add an option to not cache resolved bugs (Closes: #340259, #378342)
    + Fix URL parsing to account for recent HTML changes (Closes: #429236)
    + Always download version graphs rather than the new "options page"
    + Fix attachment parsing code to handle "filename="
  * mass-bug: Fix syntax error when reverting to default SENDMAILCMD
  * dd-list: Treat teams.debian.net addresses as mailing lists rather
    than individuals
  * tagpending: Update license statement to GPL >= 2
  * uscan: Ensure --dehs generates well-formed XML (Closes: #426996)

  [ Martin Zobel-Helas ]
  * debchange: Add volatile to the list of recognised Debian distributions