@@ -18,7 +18,7 @@ Depends: dpkg-dev, debianutils (>= 2.0), perl (>= 5.8), sed (>= 2.95),
 Recommends: fakeroot
 Suggests: devscripts-el, at, build-essential, cvs-buildpackage,
  cvs | subversion | svk | tla | bzr | git | mercurial, debian-keyring,
- dupload (>=2.1) | dput, gnupg (>= 1.0.7), gnuplot,
+ dupload (>=2.1) | dput, gnupg (>= 1.0.7), gnuplot, libcrypt-ssleay-perl,
  libdigest-md5-perl, libtimedate-perl, liburi-perl, libwww-perl,
  lintian | linda, mailx | mailutils, man-db, mutt, patch, patchutils, ssh,
  strace, wdiff, wget, www-browser
@@ -89,7 +89,8 @@ Description: Scripts to make the life of a Debian Package maintainer easier
   - tagpending: shell script which runs from a Debian source tree and tags
     bugs that are to be closed in the latest changelog as pending.
     [wget, liburi-perl]
-  - uscan: scan upstream sites for new releases of packages [libwww-perl]
+  - uscan: scan upstream sites for new releases of packages
+    [libcrypt-ssleay-perl, libwww-perl]
   - uupdate: integrate upstream changes into a source package [patch]
   - whodepends: check which maintainers' packages depend on a package
   - who-uploads [gnupg, debian-keyring, wget]: determine the most recent
